@@ -1,22 +1,24 @@
 package org.flickit.flickitassessmentcore.application.service.assessment;
 
 
+import org.flickit.flickitassessmentcore.application.domain.AssessmentColor;
+import org.flickit.flickitassessmentcore.application.domain.QualityAttribute;
+import org.flickit.flickitassessmentcore.application.domain.Subject;
+import org.flickit.flickitassessmentcore.application.domain.mother.QualityAttributeMother;
 import org.flickit.flickitassessmentcore.application.port.in.assessment.CreateAssessmentUseCase;
 import org.flickit.flickitassessmentcore.application.port.in.assessment.CreateAssessmentUseCase.Param;
 import org.flickit.flickitassessmentcore.application.port.out.assessment.CreateAssessmentPort;
 import org.flickit.flickitassessmentcore.application.port.out.assessmentresult.CreateAssessmentResultPort;
-import org.flickit.flickitassessmentcore.application.port.out.subject.LoadSubjectIdsAndQualityAttributeIdsPort;
+import org.flickit.flickitassessmentcore.application.port.out.qualityattributevalue.CreateQualityAttributeValuePort;
+import org.flickit.flickitassessmentcore.application.port.out.subject.LoadSubjectByAssessmentKitIdPort;
 import org.flickit.flickitassessmentcore.application.port.out.subjectvalue.CreateSubjectValuePort;
-import org.flickit.flickitassessmentcore.domain.AssessmentColor;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -36,17 +38,17 @@ class CreateAssessmentServiceTest {
     private CreateAssessmentResultPort createAssessmentResultPort;
 
     @Mock
-    private LoadSubjectIdsAndQualityAttributeIdsPort loadASIdsAndQAIdsPort;
+    private LoadSubjectByAssessmentKitIdPort loadSubjectsPort;
 
     @Mock
     private CreateSubjectValuePort createSubjectValuePort;
 
     @Mock
-    private org.flickit.flickitassessmentcore.application.port.out.qualityattributevalue.CreateQualityAttributeValuePort createQualityAttributeValuePort;
+    private CreateQualityAttributeValuePort createQualityAttributeValuePort;
 
 
     @Test
-    void createAssessment_ValidParam_PersistsAndReturnsId() {
+    void testCreateAssessment_ValidParam_PersistsAndReturnsId() {
         Param param = new Param(
             1L,
             "title example",
@@ -55,9 +57,8 @@ class CreateAssessmentServiceTest {
         );
         UUID expectedId = UUID.randomUUID();
         when(createAssessmentPort.persist(any(CreateAssessmentPort.Param.class))).thenReturn(expectedId);
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(Arrays.asList(), Arrays.asList());
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponseParam);
+        List<Subject> expectedResponse = List.of();
+        when(loadSubjectsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponse);
 
         CreateAssessmentUseCase.Result result = service.createAssessment(param);
         assertEquals(expectedId, result.id());
@@ -65,16 +66,16 @@ class CreateAssessmentServiceTest {
         ArgumentCaptor<CreateAssessmentPort.Param> createPortParam = ArgumentCaptor.forClass(CreateAssessmentPort.Param.class);
         verify(createAssessmentPort).persist(createPortParam.capture());
 
+        assertEquals("title-example", createPortParam.getValue().code());
         assertEquals(param.getTitle(), createPortParam.getValue().title());
         assertEquals(param.getAssessmentKitId(), createPortParam.getValue().assessmentKitId());
         assertEquals(param.getColorId(), createPortParam.getValue().colorId());
-        assertEquals("title-example", createPortParam.getValue().code());
         assertNotNull(createPortParam.getValue().creationTime());
-        assertNotNull(createPortParam.getValue().lastModificationDate());
+        assertNotNull(createPortParam.getValue().lastModificationTime());
     }
 
     @Test
-    void createAssessment_ValidParam_PersistsAssessmentResult() {
+    void testCreateAssessment_ValidParam_PersistsAssessmentResult() {
         Param param = new Param(
             1L,
             "title example",
@@ -85,9 +86,8 @@ class CreateAssessmentServiceTest {
         when(createAssessmentPort.persist(any(CreateAssessmentPort.Param.class))).thenReturn(assessmentId);
         UUID expectedResultId = UUID.randomUUID();
         when(createAssessmentResultPort.persist(any(CreateAssessmentResultPort.Param.class))).thenReturn(expectedResultId);
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(Arrays.asList(), Arrays.asList());
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponseParam);
+        List<Subject> expectedResponse = List.of();
+        when(loadSubjectsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponse);
 
         service.createAssessment(param);
 
@@ -95,11 +95,12 @@ class CreateAssessmentServiceTest {
         verify(createAssessmentResultPort).persist(createPortParam.capture());
 
         assertEquals(assessmentId, createPortParam.getValue().assessmentId());
+        assertNotNull(createPortParam.getValue().lastModificationTime());
         assertFalse(createPortParam.getValue().isValid());
     }
 
     @Test
-    void createAssessment_ValidParam_PersistsSubjectValues() {
+    void testCreateAssessment_ValidParam_PersistsSubjectValues() {
         Long assessmentKitId = 1L;
         Param param = new Param(
             1L,
@@ -107,11 +108,19 @@ class CreateAssessmentServiceTest {
             assessmentKitId,
             1
         );
-        List<Long> expectedSubjectIds = Arrays.asList(1L, 2L, 3L);
-        List<Long> expectedQualityAttributeIds = Arrays.asList(1L, 2L, 3L, 4L, 5L);
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(expectedSubjectIds, expectedQualityAttributeIds);
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(assessmentKitId)).thenReturn(expectedResponseParam);
+
+        QualityAttribute qa1 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa2 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa3 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa4 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa5 = QualityAttributeMother.simpleAttribute();
+
+        List<Subject> expectedSubjects = List.of(
+            new Subject(1L, List.of(qa1, qa2)),
+            new Subject(2L, List.of(qa3, qa4)),
+            new Subject(3L, List.of(qa5))
+        );
+        when(loadSubjectsPort.loadByAssessmentKitId(assessmentKitId)).thenReturn(expectedSubjects);
 
         service.createAssessment(param);
 
@@ -119,7 +128,7 @@ class CreateAssessmentServiceTest {
     }
 
     @Test
-    void createAssessment_ValidCommand_PersistsQualityAttributeValue() {
+    void testCreateAssessment_ValidCommand_PersistsQualityAttributeValue() {
         Long assessmentKitId = 1L;
         Param param = new Param(
             1L,
@@ -127,11 +136,18 @@ class CreateAssessmentServiceTest {
             assessmentKitId,
             1
         );
-        List<Long> expectedSubjectIds = Arrays.asList(1L, 2L, 3L);
-        List<Long> expectedQualityAttributeIds = Arrays.asList(1L, 2L, 3L, 4L, 5L);
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(expectedSubjectIds, expectedQualityAttributeIds);
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(assessmentKitId)).thenReturn(expectedResponseParam);
+        QualityAttribute qa1 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa2 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa3 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa4 = QualityAttributeMother.simpleAttribute();
+        QualityAttribute qa5 = QualityAttributeMother.simpleAttribute();
+
+        List<Subject> expectedSubjects = List.of(
+            new Subject(1L, List.of(qa1, qa2)),
+            new Subject(2L, List.of(qa3, qa4)),
+            new Subject(3L, List.of(qa5))
+        );
+        when(loadSubjectsPort.loadByAssessmentKitId(assessmentKitId)).thenReturn(expectedSubjects);
 
         service.createAssessment(param);
 
@@ -139,36 +155,15 @@ class CreateAssessmentServiceTest {
     }
 
     @Test
-    void createAssessment_NullColor_UseDefaultColor() {
-        Param param = new Param(
-            1L,
-            "title example",
-            1L,
-            null
-        );
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(Arrays.asList(), Arrays.asList());
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponseParam);
-
-        service.createAssessment(param);
-
-        ArgumentCaptor<CreateAssessmentPort.Param> createPortParam = ArgumentCaptor.forClass(CreateAssessmentPort.Param.class);
-        verify(createAssessmentPort).persist(createPortParam.capture());
-
-        assertEquals(AssessmentColor.getDefault().getId(), createPortParam.getValue().colorId());
-    }
-
-    @Test
-    void createAssessment_InvalidColor_UseDefaultColor() {
+    void testCreateAssessment_InvalidColor_UseDefaultColor() {
         Param param = new Param(
             1L,
             "title example",
             1L,
             7
         );
-        LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam expectedResponseParam =
-            new LoadSubjectIdsAndQualityAttributeIdsPort.ResponseParam(Arrays.asList(), Arrays.asList());
-        when(loadASIdsAndQAIdsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponseParam);
+        List<Subject> expectedResponse = List.of();
+        when(loadSubjectsPort.loadByAssessmentKitId(any())).thenReturn(expectedResponse);
 
         service.createAssessment(param);
 
@@ -176,33 +171,6 @@ class CreateAssessmentServiceTest {
         verify(createAssessmentPort).persist(createPortParam.capture());
 
         assertEquals(AssessmentColor.getDefault().getId(), createPortParam.getValue().colorId());
-    }
-
-    @Test
-    void generateSlugCode_NoWhitespace_ReturnsLowerCaseCode() {
-        String title = "ExampleTitle";
-
-        String code = ReflectionTestUtils.invokeMethod(service, "generateSlugCode", title);
-
-        assertEquals("exampletitle", code);
-    }
-
-    @Test
-    void generateSlugCode_WithWhitespace_ReturnsLowerCaseCodeWithHyphens() {
-        String title = "Example Title with Whitespace";
-
-        String code = ReflectionTestUtils.invokeMethod(service, "generateSlugCode", title);
-
-        assertEquals("example-title-with-whitespace", code);
-    }
-
-    @Test
-    void generateSlugCode_WithLeadingAndTrailingWhitespace_ReturnsLowerCaseCodeWithHyphens() {
-        String title = "  Example Title with   Leading and Trailing   Whitespace  ";
-
-        String code = ReflectionTestUtils.invokeMethod(service, "generateSlugCode", title);
-
-        assertEquals("example-title-with-leading-and-trailing-whitespace", code);
     }
 
 }
